Modifica a "hr" ed eliminato classi inutili

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="triangolo"> </div>
             <h2>New Task</h2>
             <!-- Sottotitolo con spunta e badge-->
-            <div class="container_sottotitolo">
+            <div>
                 <span class="spunta_verde">&#10004;</span> 
                 <h3 class="sottotitolo"> Quarterly Newsletter </h3>
                 <div class="badge badge_editorial"> Editorial</div>
@@ -38,8 +38,7 @@
             <div class="triangolo"> </div>
             <h2>Today</h2>
             <!-- Sottotitolo2 con spunta e badge-->
-            <div class="container_sottotitolo">
-
+            <div>
                 <span class="spunta_verde">&#10004;</span> 
                 <h3 class="sottotitolo"> Recruiting blog post </h3>
                 <div class="badge badge_editorial"> Editorial</div>
@@ -51,13 +50,13 @@
                 </div>
 
                 <div>
-                    <span class="x_rossa">	&cross;</span> 
+                    <span class="x_rossa">&cross;</span> 
                     <h3 class="sottotitolo"> Interview John H. </h3>
                     <div class="badge badge_recruiting"> Recruiting</div>
                 </div>
 
                 <div>
-                    <span class="spunta_verde">	&#10004;</span> 
+                    <span class="spunta_verde">&#10004;</span> 
                     <h3 class="sottotitolo"> Summit update to mobile storefronts </h3>
                     <div class="badge badge_mobile"> Mobile</div>
                 </div>
@@ -67,7 +66,7 @@
             <div class="triangolo"> </div>
             <h2>Upcoming</h2>
             <!-- Sottotitolo3 con spunta e badge-->
-            <div class="container_sottotitolo">
+            <div>
                 <span class="x_rossa">	&cross;</span> 
                 <h3 class="sottotitolo"> Schedule meeting with Alex </h3>
             
